--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html lang="th">
-<head>
-  <meta charset="UTF-8" />
-  <title>JackkyLike - เพิ่มไลค์/ติดตาม/วิว ครบจบในที่เดียว</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <h1>JackkyLike</h1>
-    <p>บริการเพิ่มไลค์ เพิ่มฟอล เพิ่มวิว ราคาถูกที่สุดในไทย</p>
-    <a class="btn" href="login.html">เข้าสู่ระบบ</a>
-  </header>
-
-  <section>
-    <h2>📌 ช่องทางเติมเครดิต</h2>
-    <p><strong>PromptPay:</strong> 092-364-3949 (จิรภัทร พุ่มกุมาร)</p>
-    <img src="qr-promptpay.png" alt="QR PromptPay" width="220" />
-    <p><strong>TrueMoney Wallet:</strong> 083-854-3298 (จิรภัทร พ.)</p>
-  </section>
-
-  <footer>
-    <p>© 2025 JackkyLike</p>
-  </footer>
-</body>
-</html>
+<!DOCTYPE html><html lang='th'><head><meta charset='UTF-8' /><title>JackkyLike - เพิ่มไลค์/ติดตาม/วิว</title><link rel='stylesheet' href='style.css' /></head><body><header><h1>JackkyLike</h1></header><section><a href='login.html' class='btn'>เข้าสู่ระบบ / สมัครสมาชิก</a></section><footer><p>© 2025 JackkyLike</p></footer></body></html>
