--- a/login.html
+++ b/login.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="th">
-<head>
-  <meta charset="UTF-8" />
-  <title>เข้าสู่ระบบ - JackkyLike</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <h1>เข้าสู่ระบบ</h1>
-  </header>
-  <section>
-    <p>หน้านี้อยู่ระหว่างการพัฒนา</p>
-  </section>
-  <footer>
-    <p>© 2025 JackkyLike</p>
-  </footer>
-</body>
-</html>
+<!DOCTYPE html><html lang='th'><head><meta charset='UTF-8' /><title>เข้าสู่ระบบ - JackkyLike</title><link rel='stylesheet' href='style.css' /><script src='https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js'></script><script src='https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js'></script><script src='firebase-config.js'></script></head><body><header><h1>เข้าสู่ระบบ / สมัครสมาชิก</h1></header><section><form id='loginForm'><input type='email' id='email' placeholder='อีเมล' required /><input type='password' id='password' placeholder='รหัสผ่าน' required /><button type='submit'>เข้าสู่ระบบ</button><button type='button' onclick='register()'>สมัครสมาชิก</button></form><p id='message'></p></section><footer><p>© 2025 JackkyLike</p></footer><script src='main.js'></script></body></html>
